--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ section
     min-height: 100vh;
 }
 
-#hero, #me, #projects
+#hero, #me, #projects, #contacts
 {
     margin-top: 74px;
 }
@@ -93,6 +93,24 @@ section
     background-color: rgba(255,255,255,0.2);
     border-radius: 15px;
 	box-shadow: 0px 0px 10px 0 rgba(0,0,0,0.8);
+}
+
+section
+{
+    opacity: 0;
+    animation: fade 1s ease-in .2s forwards;
+}
+
+@keyframes fade
+{
+    0%
+    {
+        opacity: 0;
+    }
+    100%
+    {
+        opacity: 1;
+    }
 }
 
 /* Small devices (landscape phones, 576px and up) */
