updated style sheet and about page

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,16 @@ h5
     font-size: 2rem;
 }
 
+h1
+{
+    font-size: 1.5rem;
+}
+
+h3
+{
+    font-size: 1.25rem;
+}
+
 a
 {
     text-decoration: none;
